Create title heading + basic styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <main>
         <title>Rubik's Square</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </main>
 
     <body>
+        <h1>Rubik's Square<br>Simulator</h1>
     </body>
 </html>
