--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </main>
 
     <body>
-        <h1>Rubik's Square<br>Simulator</h1>
+        <h1><span id='h1-red'>Ru</span><span id='h1-org'>bik</span><span id='h1-blu'>'</span><span id='h1-gre'>s</span> Square<br>Simulator</h1>
     </body>
 </html>
