Create the actual square

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 
     <body>
         <h1><span id='h1-red'>Ru</span><span id='h1-org'>bik</span><span id='h1-blu'>'</span><span id='h1-gre'>s</span> Square<br>Simulator</h1>
+
+        <div id="midsection">
+            <div id="square">
+                <img class="tile" src="images/LU-corner.svg">
+                <img class="tile" src="images/RU-corner.svg">
+                <img class="tile" src="images/LD-corner.svg">
+                <img class="tile" src="images/RD-corner.svg">
+            </div>
+        </div>
     </body>
 </html>
