Change div structure of midsection
I found it was more efficient to have the midsection be
a flex column of flex rows, the top/bottom buttons
in their own rows and the square and left/right buttons
in its own row.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
         <h1><span id='h1-red'>Ru</span><span id='h1-org'>bik</span><span id='h1-blu'>'</span><span id='h1-gre'>s</span> Square<br>Simulator</h1>
 
         <div id="midsection">
-            <div id="square">
-                <img class="tile" src="images/LU-corner.svg">
-                <img class="tile" src="images/RU-corner.svg">
-                <img class="tile" src="images/LD-corner.svg">
-                <img class="tile" src="images/RD-corner.svg">
+            <div class="v-buttons">
+                <div class="button"></div>
+                <div class="button"></div>
+            </div>
+            <div id="midmidsection">
+                <div class="h-buttons">
+                    <div class="button"></div>
+                    <div class="button"></div>
+                </div>
+                <div id="square">
+                    <img class="tile" src="images/LU-corner.svg">
+                    <img class="tile" src="images/RU-corner.svg">
+                    <img class="tile" src="images/LD-corner.svg">
+                    <img class="tile" src="images/RD-corner.svg">
+                </div>
+                <div class="h-buttons">
+                    <div class="button"></div>
+                    <div class="button"></div>
+                </div>
+            </div>
+            <div class="v-buttons">
+                <div class="button"></div>
+                <div class="button"></div>
             </div>
         </div>
     </body>
