Add utility buttons and stylings

--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
                 <div class="button"></div>
             </div>
         </div>
+
+        <div id='util-buttons'>
+            <div class='util-button'></div>
+            <div class='util-button'></div>
+            <div class='util-button'></div>
+            <div class='util-button'></div>
+        </div>
     </body>
 </html>
